--- a/.github/workflows/Kontrol.yml
+++ b/.github/workflows/Kontrol.yml
@@ -49,20 +49,25 @@ jobs:
       - name : Değişiklik Kontrolü
         id   : degisiklik_kontrol
         run  : |
-          git diff --quiet . || echo "degisiklik=true" >> $GITHUB_OUTPUT
+          git diff --quiet . || echo "degisiklik=true" >> $GITHUB_OUTPUT || true
 
       - name : Pull Request Oluştur
         if   : steps.degisiklik_kontrol.outputs.degisiklik == 'true'
         run  : |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
           git add -A
+
           git commit --author="keyiflerolsun <keyiflerolsun@users.noreply.github.com>" \
             -m "♻️ Domain Değişikliği" \
             -m "🔄 Otomatik domain güncellemeleri yapıldı."
           BRANCH="domain-degisikligi"
+
           git checkout -b $BRANCH
+          git pull origin $BRANCH --rebase
           git push origin $BRANCH
+
           curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls \
