--- a/.github/workflows/Kontrol.yml
+++ b/.github/workflows/Kontrol.yml
@@ -65,7 +65,7 @@ jobs:
           BRANCH="domain-degisikligi"
 
           git checkout -b $BRANCH
-          git pull origin $BRANCH --no-rebase
+          git pull origin $BRANCH --no-rebase --allow-unrelated-histories
           git push origin $BRANCH --force
 
           curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
